--- a/.github/workflows/flask-test.yml
+++ b/.github/workflows/flask-test.yml
@@ -18,7 +18,7 @@ jobs:
         python-version: '3.11'
 
     - name: Build Flask Docker Image
-      run: docker image build -t myflask-test .
+      run: docker image build --no-cache -t myflask-test .
 
     - name: Run Flask Docker container
       run: docker container run -d --name myflask-ac -p 8001:8001 myflask-test
